--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,18 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  opacity: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /* animation: App-logo-spin infinite 20s linear; */
   }
+}
+
+p {
+  opacity: 0;
+  transform: translateY(20px);
 }
 
 .App-header {
